[project]
name = "interactive-multi-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "obspy>=1.5.0",
    "pandas>=3.0.1",
    "seisbench>=0.11.5",
    "torch>=2.10.0",
]
